# coqchess

./: .gitmodules  configure.sh  coqchess.opam
.github/workflows/: ci.yml
theory/: dune
theory/Chess/: Chess.v
theory/Chess/Examples/: QKvK.v
theory/Extraction/: IO.v
theory/TB/: Hash.v  Material.v  MaterialPositions.v  Reverse.v  StateAction.v  Symmetry.v  TB.v
theory/TB/Material/: KRvK.v  KRvK_bound.v  KvK.v  Material.v  OnlyKing.v
theory/Util/: D8.v  Dec.v  Fin.v  Group.v  GroupAction.v  ListUtil.v  Mat.v  MatAction.v  PosAction.v  SBetween.v  Vec.v  VecRev.v
