opam-version: "2.0"
maintainer: "emarzion@gmail.com"
version: "dev"

homepage: "https://github.com/emarzion/coqchess"
dev-repo: "git+https://github.com/emarzion/coqchess.git"
bug-reports: "https://github.com/emarzion/coqchess/issues"
license: "GPL"

synopsis: "Coq implementation of chess"

build: [
  [dune build]
]
install: [dune install]

depends: [
  "ocaml" {>= "4.14.0"}
  "coq" {= "8.19.0"}
  "games"
  "coqtbgen"
]

authors: [
  "Evan Marzion"
]

pin-depends: [
  ["games.dev" "git+https://github.com/emarzion/games.git#34923d2e23d72365fb7fb1b00725881431aea165"]
  ["coqtbgen.dev" "git+https://github.com/emarzion/coqtbgen.git#ee1a86e2571ef51e8931676648210c7bb9e0fac2"]
]